# typetree2ksy

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: all.rs  single.rs
schemas/: AimConstraint.ksy  AndroidAssetPackImporter.ksy  Animation.ksy  AnimationClip.ksy  Animator.ksy  AnimatorController.ksy  AnimatorOverrideController.ksy  AnimatorState.ksy  AnimatorStateMachine.ksy  AnimatorStateTransition.ksy  AnimatorTransition.ksy  AnimatorTransitionBase.ksy  AnnotationManager.ksy  AreaEffector2D.ksy  ArticulationBody.ksy  AssemblyDefinitionAsset.ksy  AssemblyDefinitionImporter.ksy  AssemblyDefinitionReferenceAsset.ksy  AssemblyDefinitionReferenceImporter.ksy  AssetBundle.ksy  AssetBundleManifest.ksy  AssetMetaData.ksy  AudioBuildInfo.ksy  AudioChorusFilter.ksy  AudioClip.ksy  AudioContainerElement.ksy  AudioDistortionFilter.ksy  AudioEchoFilter.ksy  AudioHighPassFilter.ksy  AudioImporter.ksy  AudioListener.ksy  AudioLowPassFilter.ksy  AudioManager.ksy  AudioMixer.ksy  AudioMixerController.ksy  AudioMixerEffectController.ksy  AudioMixerGroup.ksy  AudioMixerGroupController.ksy  AudioMixerSnapshot.ksy  AudioMixerSnapshotController.ksy  (+249 more)
src/: ksy.rs  lib.rs
